--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
         <div class="row-items">
             <div class="container-box">
                 <div class="container-img">
-                    <img src="temple.png" alt="templeimg" class="small-img">
+                    <img src="assets/temple.png" alt="templeimg" class="small-img">
                 </div>
                 <h4>Temples Tours</h4>
                 <p>110 properties</p>
             </div>
             <div class="container-box">
                 <div class="container-img">
-                    <img src="waterfall.png" alt="waterfallimg" class="small-img">
+                    <img src="assets/waterfall.png" alt="waterfallimg" class="small-img">
                 </div>
                 <h4>Waterfall Tours</h4>
                 <p>70 properties</p>
             </div>
             <div class="container-box">
                 <div class="container-img">
-                    <img src="beach.png" alt="beachimg" class="small-img">
+                    <img src="assets/beach.png" alt="beachimg" class="small-img">
                 </div>
                 <h4>Beaches Tours</h4>
                 <p>215 properties</p>
             </div>
             <div class="container-box">
                 <div class="container-img">
-                    <img src="dish.png" alt="foodimg" class="small-img">
+                    <img src="assets/dish.png" alt="foodimg" class="small-img">
                 </div>
                 <h4>Food Tours</h4>
                 <p>110 properties</p>
@@ -83,7 +83,7 @@
         <div class="package-content">
             <div class="box">
                 <div class="thum">
-                    <img src="img1.jpeg" >
+                    <img src="assets/img1.jpeg" >
                     <h3>₹5999</h3>
                 </div>
                 <div class="dest-content">
@@ -102,7 +102,7 @@
             </div>
             <div class="box">
                 <div class="thum">
-                    <img src="img01.jpg"  >
+                    <img src="assets/img01.jpg"  >
                     <h3>₹8999</h3>
                 </div>
                 <div class="dest-content">
@@ -122,7 +122,7 @@
             
             <div class="box">
                 <div class="thum">
-                    <img src="img02.jpg" >
+                    <img src="assets/img02.jpg" >
                     <h3>₹3999</h3>
                 </div>
                 <div class="dest-content">
@@ -150,32 +150,32 @@
 
         <div class="destination-content">
             <div class="col-content">
-                <img src="img2.jpg">
+                <img src="assets/img2.jpg">
                 <h5>Jaganath Temple</h5>
                 <p>Puri</p>
             </div>
             <div class="col-content">
-                <img src="img5.jpg">
+                <img src="assets/img5.jpg">
                 <h5>Puri Golden Beach</h5>
                 <p>Puri</p>
             </div>
             <div class="col-content">
-                <img src="img3.jpg">
+                <img src="assets/img3.jpg">
                 <h5>Konark Sun Temple</h5>
                 <p>Puri</p>
             </div>
             <div class="col-content">
-                <img src="img4.jpg">
+                <img src="assets/img4.jpg">
                 <h5>Dhauli Hill Shanti Stupa</h5>
                 <p>Bhubneshwar</p>
             </div>
             <div class="col-content">
-                <img src="img6.jpg">
+                <img src="assets/img6.jpg">
                 <h5>Lingraj Temple</h5>
                 <p>Bhubneshwar</p>
             </div>
             <div class="col-content">
-                <img src="img7.jpg">
+                <img src="assets/img7.jpg">
                 <h5>Sanaghagra Waterfall</h5>
                 <p>Keonjhar</p>
             </div>
